--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-firebase": "^4.3.5",
     "react-native-gifted-chat": "^0.4.3",
     "react-native-indicators": "^0.13.0",
+    "react-native-linear-gradient": "^2.4.2",
     "react-native-material-textfield": "^0.12.0",
     "react-native-numeric-input": "^1.3.1",
     "react-native-push-notification": "^3.1.1",
