--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "react-native-typography": "^1.3.0",
     "react-native-vector-icons": "^4.6.0",
     "react-navigation": "^2.6.2",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0",
     "styled-components": "^3.4.9"
   },
   "devDependencies": {
