--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@pusher/chatkit": "^0.7.17",
     "accounting": "^0.4.1",
+    "emoji-utils": "^1.0.1",
     "firebase": "^5.2.0",
     "native-base": "^2.7.2",
     "react": "16.3.1",
