--- a/ios/nott/Info.plist
+++ b/ios/nott/Info.plist
@@ -36,13 +36,9 @@
 		</dict>
 	</dict>
 	<key>NSCameraUsageDescription</key>
-	<string>Permit Camera Access?</string>
-	<key>NSLocationAlwaysUsageDescription</key>
-	<string>Always Permit Location Access?</string>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>Permit Location Access?</string>
+	<string>Grant NottMyStyle access to device camera to take picture of your product?</string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>Permit Camera Roll Access?</string>
+	<string>Grant NottMyStyle access to pictures on your phone to select picture of product?</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>Entypo.ttf</string>
