--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native-camera": "^1.3.0",
     "react-native-collapsible": "^0.13.0",
     "react-native-elements": "^0.19.1",
+    "react-native-email": "^1.0.2",
     "react-native-fetch-blob": "^0.10.8",
     "react-native-firebase": "^4.3.5",
     "react-native-gifted-chat": "^0.4.3",
