--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-indicators": "^0.13.0",
     "react-native-linear-gradient": "^2.4.2",
     "react-native-material-textfield": "^0.12.0",
+    "react-native-multiple-choice": "^0.0.8",
     "react-native-numeric-input": "^1.3.1",
     "react-native-push-notification": "^3.1.1",
     "react-native-snap-carousel": "^3.7.4",
