--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
     "react-native-indicators": "^0.13.0",
     "react-native-linear-gradient": "^2.4.2",
     "react-native-material-textfield": "^0.12.0",
-    "react-native-multiple-choice": "^0.0.8",
     "react-native-numeric-input": "^1.3.1",
     "react-native-push-notification": "^3.1.1",
+    "react-native-select-multiple": "^1.2.0",
     "react-native-snap-carousel": "^3.7.4",
     "react-native-textinput-effects": "^0.4.2",
     "react-native-typography": "^1.3.0",
@@ -36,6 +36,7 @@
     "react-navigation": "^2.6.2",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
+    "rn-multiple-choice": "^0.0.5",
     "styled-components": "^3.4.9"
   },
   "devDependencies": {
