--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-material-textfield": "^0.12.0",
     "react-native-numeric-input": "^1.3.1",
     "react-native-push-notification": "^3.1.1",
+    "react-native-scrollable-tab-view": "^0.9.0",
     "react-native-select-multiple": "^1.2.0",
     "react-native-snap-carousel": "^3.7.4",
     "react-native-textinput-effects": "^0.4.2",
@@ -36,7 +37,6 @@
     "react-navigation": "^2.6.2",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
-    "rn-multiple-choice": "^0.0.5",
     "styled-components": "^3.4.9"
   },
   "devDependencies": {
