--- a/ios/nott/Info.plist
+++ b/ios/nott/Info.plist
@@ -38,7 +38,7 @@
 	<key>NSCameraUsageDescription</key>
 	<string>Grant NottMyStyle access to device camera to take picture of your product?</string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>Grant NottMyStyle access to pictures on your phone to select picture of product?</string>
+	<string>Grant NottMyStyle access to pictures on your phone for your Profile picture?</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>Entypo.ttf</string>
