--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-fetch-blob": "^0.10.8",
     "react-native-firebase": "^4.3.5",
     "react-native-gifted-chat": "^0.4.3",
+    "react-native-google-signin": "^1.0.0",
     "react-native-indicators": "^0.13.0",
     "react-native-linear-gradient": "^2.4.2",
     "react-native-material-textfield": "^0.12.0",
