--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-linear-gradient": "^2.4.2",
     "react-native-material-textfield": "^0.12.0",
     "react-native-numeric-input": "^1.3.1",
+    "react-native-popup-dialog": "^0.16.6",
     "react-native-push-notification": "^3.1.1",
     "react-native-select-multiple": "^1.2.0",
     "react-native-snap-carousel": "^3.7.4",
