--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-native-push-notification": "^3.1.1",
     "react-native-snap-carousel": "^3.7.4",
     "react-native-spinkit": "^1.1.1",
+    "react-native-svg": "^8.0.10",
     "react-native-textinput-effects": "^0.4.2",
     "react-native-typography": "^1.3.0",
     "react-native-vector-icons": "^4.6.0",
