--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
-    "@pusher/chatkit": "^0.7.18",
+    "@pusher/chatkit-client": "^1.2.2",
     "accounting": "^0.4.1",
     "adm-zip": "^0.4.13",
     "emoji-utils": "^1.0.1",
