--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -137,11 +137,24 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-google-signin')
     compile project(':react-native-fbsdk')
-    compile project(':react-native-vector-icons')
-    compile fileTree(dir: "libs", include: ["*.jar"])
-    compile "com.android.support:appcompat-v7:23.0.1"
-    compile "com.facebook.react:react-native:+"  // From node_modules
+    implementation fileTree(dir: "libs", include: ["*.jar"])
+//    implementation "com.android.support:appcompat-v7:23.0.1"
+    implementation "com.facebook.react:react-native:+"  // From node_modules
+    implementation project(':react-native-linear-gradient')
+    implementation (project(':react-native-camera')) {
+        exclude group: "com.google.android.gms"
+        implementation 'com.android.support:exifinterface:27.+'
+        implementation ('com.google.android.gms:play-services-vision:12.0.1') {
+            force = true
+        }
+    }
+    implementation project(':rn-fetch-blob')
+    implementation "com.android.support:appcompat-v7:27.0.2"
+    implementation 'com.google.firebase:firebase-core:16.0.1'
+    implementation project(':react-native-svg')
+    implementation project(':react-native-push-notification')
 }
 
 // Run this once to be able to run the application with BUCK
@@ -150,3 +163,6 @@ task copyDownloadableDepsToLibs(type: Copy) {
     from configurations.compile
     into 'libs'
 }
+
+apply plugin: 'com.google.gms.google-services'
+apply from: "../../node_modules/react-native-vector-icons/fonts.gradle"
