--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-native-typography": "^1.3.0",
     "react-native-vector-icons": "^4.6.0",
     "react-navigation": "^2.6.2",
+    "rn-fetch-blob": "^0.10.15",
     "styled-components": "^3.4.9",
     "xcode": "^1.0.0"
   },
