--- a/android/build.gradle
+++ b/android/build.gradle
@@ -3,10 +3,11 @@
 buildscript {
     repositories {
         jcenter()
-        maven {
-            url 'https://maven.google.com/'
-            name 'Google'
-        }
+        google()
+//        maven {
+//            url 'https://maven.google.com/'
+//            name 'Google'
+//        }
     }
     ext {
         googlePlayServicesVersion = "15.0.1"
@@ -24,6 +25,7 @@ buildscript {
 allprojects {
     repositories {
         mavenLocal()
+        google()
         jcenter()
         maven { url "https://jitpack.io" }
         maven { url "https://maven.google.com" }
@@ -31,10 +33,10 @@ allprojects {
             // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
             url "$rootDir/../node_modules/react-native/android"
         }
-        maven {
-            url 'https://maven.google.com/'
-            name 'Google'
-        }
+//        maven {
+//            url 'https://maven.google.com/'
+//            name 'Google'
+//        }
         configurations.all {
             resolutionStrategy {
                 force "com.android.support:support-v4:26.1.0"
