--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -155,6 +155,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-core:16.0.1'
     implementation project(':react-native-svg')
     implementation project(':react-native-push-notification')
+    implementation project(':react-native-spinkit')
 }
 
 // Run this once to be able to run the application with BUCK
