--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -22,3 +22,6 @@ project(':react-native-svg').projectDir = new File(rootProject.projectDir, 	'../
 
 include ':react-native-push-notification'
 project(':react-native-push-notification').projectDir = file('../node_modules/react-native-push-notification/android')
+
+include ':react-native-spinkit'
+project(':react-native-spinkit').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-spinkit/android')
