--- a/android/build.gradle
+++ b/android/build.gradle
@@ -54,3 +54,14 @@ allprojects {
         }
     }
 }
+
+subprojects {
+    afterEvaluate {project ->
+        if (project.hasProperty("android")) {
+            android {
+                compileSdkVersion 27
+                buildToolsVersion "28.0.3"
+            }
+        }
+    }
+}
