--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-indicators": "^0.13.0",
     "react-native-linear-gradient": "^2.4.2",
     "react-native-popup-dialog": "^0.16.6",
+    "react-native-progressive-image": "^1.0.4",
     "react-native-push-notification": "^3.0.2",
     "react-native-snap-carousel": "^3.7.4",
     "react-native-spinkit": "^1.1.1",
