--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-firebase": "^4.3.5",
     "react-native-gifted-chat": "^0.4.3",
     "react-native-google-signin": "^1.0.0",
+    "react-native-image-resizer": "^1.0.1",
     "react-native-indicators": "^0.13.0",
     "react-native-linear-gradient": "^2.4.2",
     "react-native-popup-dialog": "^0.16.6",
