--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "firebase": "^5.2.0",
     "native-base": "^2.7.2",
     "plist": "^3.0.1",
-    "react": "16.3.1",
+    "react": "16.0.0-alpha.12",
     "react-native": "0.55.3",
     "react-native-actionsheet": "^2.4.2",
     "react-native-animatable": "^1.3.0",
-    "react-native-camera": "^1.3.0",
+    "react-native-camera": "1.3.0",
     "react-native-collapsible": "^0.13.0",
     "react-native-elements": "^0.19.1",
     "react-native-email": "^1.0.2",
