--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -28,3 +28,6 @@ project(':react-native-spinkit').projectDir = new File(rootProject.projectDir, '
 
 include ':react-native-image-resizer'
 project(':react-native-image-resizer').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-image-resizer/android')
+
+include ':react-native-image-picker'
+project(':react-native-image-picker').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-image-picker/android')
