--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -98,7 +98,7 @@ android {
     buildToolsVersion "28.0.3"
 
     defaultConfig {
-        applicationId "com.nott"
+        applicationId "com.poco"
         minSdkVersion 18
         targetSdkVersion 26
         versionCode 7
@@ -106,6 +106,8 @@ android {
         ndk {
             abiFilters "armeabi-v7a", "x86"
         }
+        //for r-n-image-c-p
+        vectorDrawables.useSupportLibrary = true
     }
     signingConfigs {
         release {
@@ -148,6 +150,7 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-image-crop-picker')
     implementation project(':react-native-image-picker')
     implementation project(':react-native-image-resizer')
     compile project(':react-native-google-signin')
