--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
     <uses-feature android:name="android.hardware.camera" />
     <uses-feature android:name="android.hardware.camera.autofocus" />
     <!-- r-n-image-crop-picker says this is for front camera access: -->
-    <uses-feature android:name="android.hardware.camera" android:required="false" />
+    <!--<uses-feature android:name="android.hardware.camera" android:required="false" />-->
     <uses-feature android:name="android.hardware.camera.front" android:required="false" />
 
 
